--- a/schema/codegen-schema/aa/username-password.canonical.yaml
+++ b/schema/codegen-schema/aa/username-password.canonical.yaml
@@ -1,17 +1,17 @@
-kinds: 
-    -   id: canonical:///aa/username-password
-        description: Username and password authentication information
-        kind: object
-        properties:
-            -   name: username
-                description: The username
-                kind: string
-                min: 1
-                max: 200
-                required: true
-            -   name: password
-                description: The password
-                kind: string
-                min: 1
-                max: 200
-                required: true
+kinds:
+    - id: canonical:aa/username-password
+      description: Username and password authentication information
+      kind: object
+      properties:
+          - name: username
+            description: The username
+            kind: string
+            min: 1
+            max: 200
+            required: true
+          - name: password
+            description: The password
+            kind: string
+            min: 1
+            max: 200
+            required: true
