--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -1,143 +1,142 @@
 kinds:
-    -   password-requirement-body: &password-requirement-body
-            -   kind: canonical://www.boundedinfinity.com/canonical/id
-            -   type: string
-                name: name
-                description: Descriptive name for the password requirements
-                min: 1
-                max: 25
-            -   name: length
-                type: integer
-                description: The password length.
-                default: 12
-                min: 6
-                max: 50
-                required: true
-            -   name: letter-count
-                type: integer
-                description: The number of letter characters. 
-                min: 0
-            -   name: lowercase-count
-                type: integer
-                description: The number of lower case characters.
-                min: 0
-            -   name: uppercase-count
-                type: integer
-                description: The number of upper case characters.
-                min: 0
-            -   name: number-count
-                description: The number of number characters.
-                type: integer
-                min: 0
-            -   name: symbol-count
-                description: The number of symbol characters.
-                type: integer
-                min: 0
-    # ==========================================================================================
-    #  Password Requirements
-    # ==========================================================================================
-    -   id: canonical:auth/password-requirement-model
-        description: Password requirements
-        type: object
-        properties:
-            -   kind: canonical://www.boundedinfinity.com/canonical/id
-            -   <<: *password-requirement-body
-            
-    -   id: canonical:auth/password-requirement-retrieve-request
-        description: Password requirements
-        type: object
-        properties:
-            -   name: tracking-id
-                kind: canonical://www.boundedinfinity.com/canonical/id
-            -   <<: *password-requirement-body
+  - password-requirement-body: &password-requirement-body
+      - kind: canonical:/id
+      - type: string
+        name: name
+        description: Descriptive name for the password requirements
+        min: 1
+        max: 25
+      - name: length
+        type: integer
+        description: The password length.
+        default: 12
+        min: 6
+        max: 50
+        required: true
+      - name: letter-count
+        type: integer
+        description: The number of letter characters.
+        min: 0
+      - name: lowercase-count
+        type: integer
+        description: The number of lower case characters.
+        min: 0
+      - name: uppercase-count
+        type: integer
+        description: The number of upper case characters.
+        min: 0
+      - name: number-count
+        description: The number of number characters.
+        type: integer
+        min: 0
+      - name: symbol-count
+        description: The number of symbol characters.
+        type: integer
+        min: 0
+  # ==========================================================================================
+  #  Password Requirements
+  # ==========================================================================================
+  - id: canonical:auth/password-requirement-model
+    description: Password requirements
+    type: object
+    properties:
+      - kind: canonical:id
+      - <<: *password-requirement-body
 
-    -   id: canonical:auth/password-requirement-create-request
-        description: Password requirements
-        type: object
-        properties:
-            -   name: tracking-id
-                kind: canonical://www.boundedinfinity.com/canonical/id
-            -   <<: *password-requirement-body
-    
-    -   id: canonical:auth/password-requirement-delete-request
-        description: Password requirements
-        type: object
-        properties:
-            -   name: tracking-id
-                kind: canonical://www.boundedinfinity.com/canonical/id
-            -   <<: *password-requirement-body
-    
-    -   id: canonical:auth/password-requirement-update-request
-        description: Password requirements
-        type: object
-        properties:
-            -   name: tracking-id
-                kind: canonical://www.boundedinfinity.com/canonical/id
-            -   kind: canonical://www.boundedinfinity.com/canonical/id
-            -   <<: *password-requirement-body
+  - id: canonical:auth/password-requirement-retrieve-request
+    description: Password requirements
+    type: object
+    properties:
+      - name: tracking-id
+        kind: canonical:id
+      - <<: *password-requirement-body
+
+  - id: canonical:auth/password-requirement-create-request
+    description: Password requirements
+    type: object
+    properties:
+      - name: tracking-id
+        kind: canonical:id
+      - <<: *password-requirement-body
+
+  - id: canonical:auth/password-requirement-delete-request
+    description: Password requirements
+    type: object
+    properties:
+      - name: tracking-id
+        kind: canonical:id
+      - <<: *password-requirement-body
+
+  - id: canonical:auth/password-requirement-update-request
+    description: Password requirements
+    type: object
+    properties:
+      - name: tracking-id
+        kind: canonical:id
+      - kind: canonical:id
+      - <<: *password-requirement-body
 
 operations:
-    -   id: canonical:auth/username-password-create
-        name: create
-        input: 
-            ref: https://www.boundedinfinity.com/type/auth/username-password-create-request
-        output: 
-            ref: https://www.boundedinfinity.com/type/auth/username-password-create-response
+  - id: canonical:auth/username-password-create
+    name: create
+    input:
+      ref: https://www.boundedinfinity.com/type/auth/username-password-create-request
+    output:
+      ref: https://www.boundedinfinity.com/type/auth/username-password-create-response
 
 ---
-
 kinds:
-    -   id: canonical:auth/username-password-model
-        description: Username and password credentials information
-        type: object
-        properties:
-            -   kind: canonical://www.boundedinfinity.com/canonical/id
-            -   name: name
-                description: A descriptive name for this username / password pair.
-                type: string
-                max: 25
-            -   kind: canonical://www.boundedinfinity.com/canonical/util/description
-            -   name: username
-                description: The username
-                type: string
-                min: 1
-                max: 50
-                required: true
-            -   name: password
-                description: The password
-                type: string
-                min: 1
-                max: 50
-                required: true
+  - id: canonical:auth/username-password-model
+    description: Username and password credentials information
+    type: object
+    properties:
+      - kind: canonical:id
+      - name: name
+        description: A descriptive name for this username / password pair.
+        type: string
+        max: 25
+      - kind: canonical:util/description
+      - name: username
+        description: The username
+        type: string
+        min: 1
+        max: 50
+        required: true
+      - name: password
+        description: The password
+        type: string
+        min: 1
+        max: 50
+        required: true
 
-    -   id: https://www.boundedinfinity.com/type/auth/username-password-create-request
-        type: object
-        description: A username and password credentials create request
-        properties:
-            -   type: array
-                name: credentials
-                items: 
-                    ref: https://www.boundedinfinity.com/type/auth/username-password
-                required: true
-                min: 1
-    -   id: https://www.boundedinfinity.com/type/auth/username-password-create-response
-        type: object
-        description: A username and password credentials create response
-        properties:
-            -   type: array
-                name: credentials
-                items: 
-                    ref: https://www.boundedinfinity.com/type/auth/username-password
-                required: true
-                min: 1
-            -   name: errors
-                type: array
-                items: 
-                    type: string
+  - id: https://www.boundedinfinity.com/type/auth/username-password-create-request
+    type: object
+    description: A username and password credentials create request
+    properties:
+      - type: array
+        name: credentials
+        items:
+          ref: https://www.boundedinfinity.com/type/auth/username-password
+        required: true
+        min: 1
+  - id: https://www.boundedinfinity.com/type/auth/username-password-create-response
+    type: object
+    description: A username and password credentials create response
+    properties:
+      - type: array
+        name: credentials
+        items:
+          ref: https://www.boundedinfinity.com/type/auth/username-password
+        required: true
+        min: 1
+      - name: errors
+        type: array
+        items:
+          type: string
 operations:
-    -   id: canonical:auth/username-password-create
-        name: create
-        inputs: 
-            - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-request
-        outputs: 
-            - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-response
+  - id: canonical:auth/username-password-create
+    name: create
+    inputs:
+      - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-request
+    outputs:
+      - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-response
