--- a/schema/codegen-schema/banking/ach.canonical.yaml
+++ b/schema/codegen-schema/banking/ach.canonical.yaml
@@ -1,20 +1,20 @@
 kinds:
-    -   id: canonical:///banking/automatic-clearning-house
-        description: |
-            The bank Automatic Clearning House (ACH) routing number
-        kind: object
-        properties:
-            -   name: name
-                description: The ACH name
-                kind: string
-                required: true
-            -   name: description
-                description: The ACH name
-                kind: string
-            -   name: routing-number
-                description: The bank account number
-                kind: string
-                required: true
-            -   name: bank
-                kind: ref
-                ref: canonical://www.boundedinfinity.com/canonical/banking/bank
+  - id: canonical:banking/automatic-clearning-house
+    description: |
+      The bank Automatic Clearning House (ACH) routing number
+    kind: object
+    properties:
+      - name: name
+        description: The ACH name
+        kind: string
+        required: true
+      - name: description
+        description: The ACH name
+        kind: string
+      - name: routing-number
+        description: The bank account number
+        kind: string
+        required: true
+      - name: bank
+        kind: ref
+        ref: canonical:banking/bank
