--- a/schema/codegen-schema/bookkeeping/book.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/book.canonical.yaml
@@ -1,11 +1,11 @@
 kinds:
-    -   id: canonical:///bookkeeping/book
-        description: Double Entry Bookkeeping Book
-        kind: object
-        properties:
-            -   name: name
-                description: The name of the account
-                kind: string
-            -   name: description
-                description: The description of the account
-                kind: string
+    - id: canonical:bookkeeping/book
+      description: Double Entry Bookkeeping Book
+      kind: object
+      properties:
+          - name: name
+            description: The name of the account
+            kind: string
+          - name: description
+            description: The description of the account
+            kind: string
