--- a/schema/codegen-schema/data/acro.canonical.yaml
+++ b/schema/codegen-schema/data/acro.canonical.yaml
@@ -1,23 +1,23 @@
 kinds:
-    -   id: canonical:///data/acro
-        description: An acroymn definition
-        kind: object
-        properties:
-            -   name: title
-                description: The acronym title
-                kind: string
-                max: 200
-                required: true
-            -   name: abbr
-                description: An abbreviation
-                kind: string
-            -   name: dates
-                kind: array
-                items:
-                    kind: ref
-                    ref: canonical://www.boundedinfinity.com/canonical/time/labeled-datetime
-            -   name: labels
-                kind: array
-                items:
-                    kind: ref
-                    ref: canonical://www.boundedinfinity.com/canonical/label/label
+  - id: canonical:data/acro
+    description: An acroymn definition
+    kind: object
+    properties:
+      - name: title
+        description: The acronym title
+        kind: string
+        max: 200
+        required: true
+      - name: abbr
+        description: An abbreviation
+        kind: string
+      - name: dates
+        kind: array
+        items:
+          kind: ref
+          ref: canonical:time/labeled-datetime
+      - name: labels
+        kind: array
+        items:
+          kind: ref
+          ref: canonical:label/label
