--- a/schema/codegen-schema/id/uuid.canonical.yaml
+++ b/schema/codegen-schema/id/uuid.canonical.yaml
@@ -1,7 +1,7 @@
 kinds:
-    -   id: canonical:util/uuidv4
-        name: UUID v4
-        type: string
-        min: 36
-        max: 36
-        regex: '[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
+    - id: canonical:id/uuidv4
+      name: UUID v4
+      type: string
+      min: 36
+      max: 36
+      regex: '[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
