--- a/schema/codegen-schema/time/duration.canonical.yaml
+++ b/schema/codegen-schema/time/duration.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical:///time/duration
-        description: Duration
-        kind: string
-        format: duration
+    - id: canonical:time/duration
+      description: Duration
+      kind: string
+      format: duration
