--- a/schema/codegen-schema/util/abbreviation.canonical.yaml
+++ b/schema/codegen-schema/util/abbreviation.canonical.yaml
@@ -1,33 +1,33 @@
 kinds:
-    -   id: canonical:util/abbreviation
-        name: abbreviation
-        type: object
-        properties:
-            -   kind: canonical://www.boundedinfinity.com/canonical/id
-            -   name: title
+    - id: canonical:util/abbreviation
+      name: abbreviation
+      type: object
+      properties:
+          - kind: canonical:id
+          - name: title
+            type: string
+            min: 1
+            max: 150
+            required: true
+            description: >
+                <p>The text to which the abbreviation refers.</p>
+                <p>
+                    Any character surrounded with parentheses is used to mark or hightlight how the text is tied 
+                    to the abbreviation.  The rendering engine can decide to use this formation (or not) as needed 
+                    for the display.
+                </p>
+          - name: abbr
+            type: array
+            unique: true
+            description: >
+                <p>The list of abbreviations for the given text.</p>
+                <p>
+                    Certain text may have more than one common abbreviation.
+                </p>
+            items:
                 type: string
                 min: 1
-                max: 150
-                required: true
-                description: >
-                    <p>The text to which the abbreviation refers.</p>
-                    <p>
-                        Any character surrounded with parentheses is used to mark or hightlight how the text is tied 
-                        to the abbreviation.  The rendering engine can decide to use this formation (or not) as needed 
-                        for the display.
-                    </p>
-            -   name: abbr
-                type: array
-                unique: true
-                description: >
-                    <p>The list of abbreviations for the given text.</p>
-                    <p>
-                        Certain text may have more than one common abbreviation.
-                    </p>
-                items:
-                    type: string
-                    min: 1
-                    max: 10
-                min: 1
-                required: true
-            -   kind: canonical://www.boundedinfinity.com/canonical/util/description
+                max: 10
+            min: 1
+            required: true
+          - kind: canonical:util/description
