--- a/schema/codegen-schema/address/internet.canonical.yaml
+++ b/schema/codegen-schema/address/internet.canonical.yaml
@@ -1,24 +1,24 @@
 kinds:
-    -   id: canonical:///address/internet
-        description: An internet address
-        kind: object
-        properties:
-            -   name: title
-                description: Title of the email address
-                kind: string
-                max: 200
-            -   name: address
-                description: Email follwoing the RFC 5321, section 4.1.2 specification.
-                kind: string
-                format: uri-reference
-                required: true
-            -   name: dates
-                kind: array
-                items:
-                    kind: string
-                    format: date
-            -   name: labels
-                kind: array
-                items:
-                    kind: ref
-                    ref: canonical://www.boundedinfinity.com/canonical/label/label
+  - id: canonical:address/internet
+    description: An internet address
+    kind: object
+    properties:
+      - name: title
+        description: Title of the email address
+        kind: string
+        max: 200
+      - name: address
+        description: Email follwoing the RFC 5321, section 4.1.2 specification.
+        kind: string
+        format: uri-reference
+        required: true
+      - name: dates
+        kind: array
+        items:
+          kind: string
+          format: date
+      - name: labels
+        kind: array
+        items:
+          kind: ref
+          ref: canonical:/label/label
