--- a/schema/codegen-schema/banking/aba-format.canonical.yaml
+++ b/schema/codegen-schema/banking/aba-format.canonical.yaml
@@ -1,16 +1,16 @@
 kinds:
-    -   id: canonical:///banking/aba-format
-        description: |
-            <p>
-                The bank American Banking Association (ABA) routing transit number (RTN) format.
-            </p>
-            <p>
-                Referece: canonical://en.wikipedia.org/wiki/ABA_routing_transit_number
-            </p>
-        kind: string
-        enum:
-            - MICR
-            - Fraction
-        enum-description:
-            MICR: Magnetic Ink Character Recognition
-            Fraction: The fraction form looks like a fraction, with a numerator and a denominator.
+    - id: canonical:banking/aba-format
+      description: |
+          <p>
+              The bank American Banking Association (ABA) routing transit number (RTN) format.
+          </p>
+          <p>
+              Referece: canonical://en.wikipedia.org/wiki/ABA_routing_transit_number
+          </p>
+      kind: string
+      enum:
+          - MICR
+          - Fraction
+      enum-description:
+          MICR: Magnetic Ink Character Recognition
+          Fraction: The fraction form looks like a fraction, with a numerator and a denominator.
