--- a/schema/codegen-schema/banking/card-type.canonical.yaml
+++ b/schema/codegen-schema/banking/card-type.canonical.yaml
@@ -1,7 +1,7 @@
 kinds:
-    -   id: canonical:///banking/card-type
-        description: Card Type
-        kind: string
-        enum:
-            -   Credit
-            -   Debit
+    - id: canonical:banking/card-type
+      description: Card Type
+      kind: string
+      enum:
+          - Credit
+          - Debit
