--- a/schema/codegen-schema/film/episode.canonical.yaml
+++ b/schema/codegen-schema/film/episode.canonical.yaml
@@ -1,26 +1,26 @@
 kinds:
-    -   id: canonical:///film/episode
-        description: A television series episode record
-        kind: object
-        properties:
-            -   name: title
-                kind: string
-                required: true
-            -   name: sub-title
-                kind: string
-            -   name: actors
-                kind: array
-                items:
-                    kind: canonical://www.boundedinfinity.com/canonical/film/actor
-            -   name: people
-                kind: array
-                items:
-                    kind: canonical://www.boundedinfinity.com/canonical/film/person
-            -   name: labels
-                kind: array
-                items:
-                    kind: canonical://www.boundedinfinity.com/canonical/label/kvlabel
-            -   name: dates
-                kind: array
-                items:
-                    kind: canonical://www.boundedinfinity.com/canonical/time/sdate
+  - id: canonical:film/episode
+    description: A television series episode record
+    kind: object
+    properties:
+      - name: title
+        kind: string
+        required: true
+      - name: sub-title
+        kind: string
+      - name: actors
+        kind: array
+        items:
+          kind: canonical:film/actor
+      - name: people
+        kind: array
+        items:
+          kind: canonical:film/person
+      - name: labels
+        kind: array
+        items:
+          kind: canonical:label/kvlabel
+      - name: dates
+        kind: array
+        items:
+          kind: canonical:time/sdate
