--- a/schema/codegen-schema/math/number.canonical.yaml
+++ b/schema/codegen-schema/math/number.canonical.yaml
@@ -1,33 +1,33 @@
 kinds:
-    -   id: canonical:math/number/fraction
-        name: fraction
-        type: object
-        description: Fractional Number
-        properties:
-            -   type: integer
-                name: numerator
-                min: 0
-            -   type: integer
-                name: denominator
-                invalid: [0]
-                min: 0
+    - id: canonical:math/number/fraction
+      name: fraction
+      type: object
+      description: Fractional Number
+      properties:
+          - type: integer
+            name: numerator
+            min: 0
+          - type: integer
+            name: denominator
+            invalid: [0]
+            min: 0
 
-    -   id: canonical:math/number/rational
-        name: rational
-        type: object
-        description: Rational Number
-        properties:
-            -   type: integer
-                name: numerator
-            -   type: integer
-                name: denominator
-                invalid: [0]
+    - id: canonical:math/number/rational
+      name: rational
+      type: object
+      description: Rational Number
+      properties:
+          - type: integer
+            name: numerator
+          - type: integer
+            name: denominator
+            invalid: [0]
 
-    -   id: canonical:math/number/mixed
-        name: rational
-        type: object
-        description: Mixed Number
-        properties:
-            -   type: integer
-                name: whole
-            -   kind: canonical://www.boundedinfinity.com/canonical/math/number/rational
+    - id: canonical:math/number/mixed
+      name: rational
+      type: object
+      description: Mixed Number
+      properties:
+          - type: integer
+            name: whole
+          - kind: canonical:math/number/rational
