--- a/schema/codegen-schema/people/employment.canonical.yaml
+++ b/schema/codegen-schema/people/employment.canonical.yaml
@@ -1,18 +1,18 @@
 kinds:
-    -   id: canonical:///people/employment
-        description: Employment
-        kind: object
-        properties:
-            -   name: title
-                description: Job title
-                kind: string
-                max: 200
-                required: true
-            -   name: company
-                kind: ref
-                ref: canonical://www.boundedinfinity.com/canonical/corporation/company
-                required: true
-            -   name: dates
-                kind: array
-                items:
-                    kinds: canonical://www.boundedinfinity.com/canonical/time/sdate
+  - id: canonical:people/employment
+    description: Employment
+    kind: object
+    properties:
+      - name: title
+        description: Job title
+        kind: string
+        max: 200
+        required: true
+      - name: company
+        kind: ref
+        ref: canonical:corporation/company
+        required: true
+      - name: dates
+        kind: array
+        items:
+          kinds: canonical:time/sdate
