--- a/schema/codegen-schema/people/pseudonym-type.canonical.yaml
+++ b/schema/codegen-schema/people/pseudonym-type.canonical.yaml
@@ -1,64 +1,64 @@
 kinds:
-    -   id: canonical:///people/pseudonym-type
-        title: A person's pseudonym type
-        kind: object
-        properties:
-            -   name: id
-                kind: string
-                description: The suffix ID
-                format: uri
-            -   name: text
-                kind: string
-                description: The suffix text
-                max: 20
-                min: 1
-                required: true
-            -   name: abbreviation
-                kind: string
-                description: The suffix abbreviation
-                max: 5
-                min: 1
-            -   name: description
-                kind: ref
-                ref: canonical://www.boundedinfinity.com/canonical/util/description
-                description: The suffix description
-            -   name: status
-                kind: ref
-                ref: canonical://www.boundedinfinity.com/canonical/util/record-status
+  - id: canonical:people/pseudonym-type
+    title: A person's pseudonym type
+    kind: object
+    properties:
+      - name: id
+        kind: string
+        description: The suffix ID
+        format: uri
+      - name: text
+        kind: string
+        description: The suffix text
+        max: 20
+        min: 1
+        required: true
+      - name: abbreviation
+        kind: string
+        description: The suffix abbreviation
+        max: 5
+        min: 1
+      - name: description
+        kind: ref
+        ref: canonical:util/description
+        description: The suffix description
+      - name: status
+        kind: ref
+        ref: canonical:util/record-status
 
 data:
-    # https://en.wikipedia.org/wiki/Pseudonym
+  # https://en.wikipedia.org/wiki/Pseudonym
 
-    -   id: canonical:people/pseudonym-type/nickname
-        title: Nickname
-        description: A person's nick name.
-    -   id: canonical:people/pseudonym-type/alias
-        title: Alias
-        description: A person alias
-    -   id: canonical:people/pseudonym-type/stage-name
-        title: Stage name
-        description: A person's stage name
-    -   id: canonical:people/pseudonym-type/ring-name
-        title: Ring name
-        description: A person's ring name
-    -   id: canonical:people/pseudonym-type/pen-name
-        title: Pen
-        description: A person's pen name
-    -   id: canonical:people/pseudonym-type/nom-de-plume
-        title: Nom de plume
-        kind: ref
-        ref: canonical://people/pseudonym-type/pen-name
-    -   id: canonical:people/pseudonym-type/regnal-name
-        title: Regnal name
-        description: A person's regnal name
-    -   id: canonical:people/pseudonym-type/regnant-name
-        title: Regnant name
-        kind: ref
-        ref: canonical://people/pseudonym-type/regnal-name
-    -   id: canonical:people/pseudonym-type/reign-name
-        title: Reign name
-        kind: ref
-        ref: canonical://people/pseudonym-type/reign-name
-    -   id: canonical:people/pseudonym-type/online-name
-        title: Online name
-        description: A person's online name
+  - id: canonical:people/pseudonym-type/nickname
+    title: Nickname
+    description: A person's nick name.
+  - id: canonical:people/pseudonym-type/alias
+    title: Alias
+    description: A person alias
+  - id: canonical:people/pseudonym-type/stage-name
+    title: Stage name
+    description: A person's stage name
+  - id: canonical:people/pseudonym-type/ring-name
+    title: Ring name
+    description: A person's ring name
+  - id: canonical:people/pseudonym-type/pen-name
+    title: Pen
+    description: A person's pen name
+  - id: canonical:people/pseudonym-type/nom-de-plume
+    title: Nom de plume
+    kind: ref
+    ref: canonical://people/pseudonym-type/pen-name
+  - id: canonical:people/pseudonym-type/regnal-name
+    title: Regnal name
+    description: A person's regnal name
+  - id: canonical:people/pseudonym-type/regnant-name
+    title: Regnant name
+    kind: ref
+    ref: canonical://people/pseudonym-type/regnal-name
+  - id: canonical:people/pseudonym-type/reign-name
+    title: Reign name
+    kind: ref
+    ref: canonical://people/pseudonym-type/reign-name
+  - id: canonical:people/pseudonym-type/online-name
+    title: Online name
+    description: A person's online name
