--- a/schema/codegen-schema/people/pseudonym.canonical.yaml
+++ b/schema/codegen-schema/people/pseudonym.canonical.yaml
@@ -1,14 +1,14 @@
 kinds:
-    -   id: canonical:///people/pseudonym
-        title: A person's pseudonym
-        kind: object
-        properties:
-            -   name: kind
-                kind: ref
-                ref: canonical://www.boundedinfinity.com/canonical/people/pseudonym-type
-            -   name: text
-                description: The pseudonym text
-                kind: string
-                max: 50
-                min: 1
-                required: true
+  - id: canonical:people/pseudonym
+    title: A person's pseudonym
+    kind: object
+    properties:
+      - name: kind
+        kind: ref
+        ref: canonical:people/pseudonym-type
+      - name: text
+        description: The pseudonym text
+        kind: string
+        max: 50
+        min: 1
+        required: true
