--- a/schema/codegen-schema/physical-inventory/item.canonical.yaml
+++ b/schema/codegen-schema/physical-inventory/item.canonical.yaml
@@ -1,23 +1,23 @@
 kinds:
-    -   id: canonical:///physical-inventory/item
-        description: A physical item
-        kind: object
-        properties:
-            -   name: title
-                kind: string
-                description: The item title
-                max: 200
-            -   name: description
-                kind: string
-                description: The item description
-                max: 2000
-            -   name: bookmarks
-                kind: array
-                items:
-                    kind: ref
-                    ref: canonical://www.boundedinfinity.com/canonical/util/bookmark
-            -   name: labels
-                kind: array
-                items:
-                    kind: ref
-                    ref: canonical://www.boundedinfinity.com/canonical/label/label
+  - id: canonical:physical-inventory/item
+    description: A physical item
+    kind: object
+    properties:
+      - name: title
+        kind: string
+        description: The item title
+        max: 200
+      - name: description
+        kind: string
+        description: The item description
+        max: 2000
+      - name: bookmarks
+        kind: array
+        items:
+          kind: ref
+          ref: canonical:util/bookmark
+      - name: labels
+        kind: array
+        items:
+          kind: ref
+          ref: canonical:label/label
